--- a/web-interactiva/vercel.json
+++ b/web-interactiva/vercel.json
@@ -3,7 +3,10 @@
   "builds": [
     {
       "src": "run_server.py",
-      "use": "@vercel/python"
+      "use": "@vercel/python",
+      "config": {
+        "installCommand": "pip install -r requirements.txt"
+      }
     }
   ],
   "routes": [
